Startup SVG's and other small changes

--- a/web/src/components/BorderlessCard/BorderlessCard.module.css
+++ b/web/src/components/BorderlessCard/BorderlessCard.module.css
@@ -23,6 +23,9 @@
   max-width: 200px;
   font-size: 13px;
   line-height: 150%;
+  white-space: nowrap;
+  padding: 10px;
+  text-align: center;
 }
 
 .price:hover{
