--- a/web/src/pages/learn/youth/youth.module.scss
+++ b/web/src/pages/learn/youth/youth.module.scss
@@ -218,8 +218,8 @@
 .list-text {
     font-size: 1rem;
     line-height: 1.6rem;
-    padding-left: inherit;
-    text-indent: -1.4rem;
+    //padding-left: inherit;
+    //text-indent: -1.4rem;
 
 }
 
