--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -20,9 +20,11 @@
         }
 
         @media (max-width: 480px){
-            background-position: center;
+            background-size: cover;
+            background-position: 20% 0;
             margin-top: 10px;
-            height: 75vh;
+            font-size: 0.75rem;
+            height: 90vh;
             width: 100%;
         }
        
@@ -46,9 +48,8 @@
             margin-top: 5vh ;
         }
         @include screen-md{
-            // margin-top: 5vh ;
-          
-            margin-bottom: 170px;
+           // margin-top: 5vh ;
+            
         }
         @include screen-sm{
             title{
@@ -58,9 +59,6 @@
         @include screen-xs{
             
         }
-       
-
-     
 
 
     .sideNav{
