--- a/web/src/pages/learn/adults/adults.module.scss
+++ b/web/src/pages/learn/adults/adults.module.scss
@@ -43,7 +43,27 @@
     text-align: center;
 
 }
-
+.box{
+    @media (min-width: 1100px) {
+        h1, h2, p {
+            color: white
+        }
+    }
+}
+.box::before{
+    @media (min-width: 1100px) {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 90%;
+        height: 100%;
+        background-color: #323232;
+        transform: skew(-70deg); /* Adjust the angle of the diagonal stripe */
+        transform-origin: 0 0;
+        z-index: -1; /* Place the stripe behind the card content */
+    }
+} 
 
 /* This was taken out of each of the backgrounds - leaving in comments in case something breaks
 .headerTitle {
