--- a/web/src/pages/learn/youth/youth.module.scss
+++ b/web/src/pages/learn/youth/youth.module.scss
@@ -68,12 +68,14 @@
         padding-left: 18px;
         height: 240px;
     }
+    @media (min-width: 769px){
+        margin-top: 30%;
+    }
 }
 
 .why-learn {
-    margin-top: 30%;
     text-transform: uppercase;
-
+    margin-top: 20%;
     @include screen-sm {
         margin-top: 10%;
     }
@@ -89,7 +91,7 @@
     }
 }
 .title-text {
-    margin-top: 30vh;
+    margin-top: 30%;
     @include screen-sm {
         margin-top: 10vh;
     }
@@ -100,10 +102,10 @@
 
 .course-description {
     font-size: 1rem;
-    margin-top: 20%;
+    margin-top: 10%;
     color: white;
     @include screen-md {
-        margin-top: 50%;
+        margin-top: 20%;
     }
     @include screen-sm {
         font-size: .9rem;
