--- a/web/src/pages/learn/youth/youth.module.scss
+++ b/web/src/pages/learn/youth/youth.module.scss
@@ -180,10 +180,9 @@
 .engaged {
     background-image: url(../../../images/learn/youth-engaged-bg.png);
     background-repeat: no-repeat;
-    position: center 15%;
+    background-position: center 10%;
+    background-size: 100% 100%;
     min-width: 100%;
-    background-size: 100%;
-    margin-top: 30px;
     color: white;
     @include screen-sm {
         color: $brand-color2;
