--- a/web/src/pages/bootcamp/Components/profileCard.module.scss
+++ b/web/src/pages/bootcamp/Components/profileCard.module.scss
@@ -9,19 +9,22 @@
             width: 120px;
             border-radius: 50%;
             margin-top: 30px;
-            // margin-left: 80px;
+            margin-left: 120px;
 
         }
         @include screen-lg{
             width: 150px;
             border-radius: 50%;
-            margin-left: 300px;
+            margin-left: 15px;
+            margin-bottom: 30px;
+
         
         }
         @include screen-md{
             width: 150px;
             border-radius: 50%;
-            margin-left: 50px;
+            margin-left: 65px;
+            margin-bottom: 30px;
             
         }
         @include screen-sm{
