--- a/web/src/components/BackgroundCard/BackgroundCard.module.scss
+++ b/web/src/components/BackgroundCard/BackgroundCard.module.scss
@@ -23,7 +23,7 @@
 }
 
 .card-title {
-  font-size: .9rem;
+  font-size: 1rem;
   line-height: .9rem;
   letter-spacing: 1px;
   @include screen-xs {
@@ -33,6 +33,6 @@
 
 
 .card-text {
-  font-size: .7rem;
+  font-size: .8rem;
   line-height: .9rem;
 }
