attempt to change BrandButton to css

--- a/web/src/styles/utility.scss
+++ b/web/src/styles/utility.scss
@@ -45,7 +45,7 @@
 
 $bg-filter-blur: blur(2px) grayscale(0.8);
 .bg-filter-mute {
-  background-image: url('/static/ainc-workspace-hero-dee943c5bfd8067ac48fc51ad5d8a893.jpeg');
+  background-image: url('/static/awesome-inc-space.jpg');
   background-size: cover;
   overflow: auto;
   position: relative;
