modify bootcamp confirmation page

--- a/web/src/components/CourseCardLong/coursecardlong.module.scss
+++ b/web/src/components/CourseCardLong/coursecardlong.module.scss
@@ -31,8 +31,7 @@
     display: block;
     width: fit-content;
     height: auto;
-    margin-top: 35px;
-    margin-left:15px;
+    right: 2rem;
     max-width: 100%;
     position: relative;
 }
