--- a/web/src/pages/about/about.module.css
+++ b/web/src/pages/about/about.module.css
@@ -9,7 +9,7 @@
 }
 
 .about-header {
-  background-image: url(../../images/about-page-bg.png);
+  background-image: url(../../images/about-page-bg.jpg);
   background-repeat: no-repeat;
   background-size: 100%;
   padding-bottom: 50px;
