--- a/web/src/styles/utility.scss
+++ b/web/src/styles/utility.scss
@@ -42,10 +42,10 @@
 .parallax {
   background-attachment: fixed;
 }
-
+$image-path: '/static/awesome-inc-space-banner-ae4a4687dceb6d81adbae43de6c2a774.jpg';
 $bg-filter-blur: blur(2px) grayscale(0.8);
 .bg-filter-mute {
-  background-image: url('/static/awesome-inc-space.jpg');
+  background-image: url($image-path);
   background-size: cover;
   overflow: auto;
   position: relative;
