add bohemian font

--- a/web/src/pages/bootcamp/Components/sideNav.module.scss
+++ b/web/src/pages/bootcamp/Components/sideNav.module.scss
@@ -6,15 +6,10 @@
 .navContainer {
     background-color:whitesmoke;
     position: fixed;
-    float: right !important;
-    // margin-top: -115px;
-    margin-top: -65px;
-    // margin-right: -50px;
-    // margin-left: 117px;
-    margin-left: 300px;
+    right: 0;
+    margin-top: -6rem;
     z-index: 999;
     max-width: 250px;
-    // width: 250px;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
 
@@ -22,7 +17,6 @@
         padding-top: 5px;
         padding-bottom: 5px;
         padding-left: 5px;
-        padding-right: 40px;
     }
 
     @include screen-md {
