--- a/web/src/styles/mixins.scss
+++ b/web/src/styles/mixins.scss
@@ -1,5 +1,5 @@
 @import "mixins/rfs"; // RFS mixin.
-@import "mixins/font"; // Font size
+@import "mixins/font"; // Font size and fonts
 @import "mixins/responsive"; // Responsiveness
 @import "mixins/color"; // Colors
 @import "mixins/helpers";
