fix bootcamp hero image(again)

--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/variables.scss";
 
 .header {
-        background-image: url('../../images/hero-image-2-min.jpg');
+        background-image: url('/images/hero-image-2-min.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         @media (min-width: 992px){
