--- a/web/src/styles/utility.scss
+++ b/web/src/styles/utility.scss
@@ -70,6 +70,10 @@ $bg-filter-blur: blur(2px) grayscale(0.8);
   background-color: $brand-color2;
 }
 
+.bg--brand-color {
+  background-color: $brand-color;
+}
+
 .border-right--white {
   border-right: 2px solid #fff;
 }
