Fixing site launch issues

--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -105,7 +105,7 @@
 
 
 .testimonials {
-    background-image: url(../../images/bootcamp/testimonials-bg.jpg);
+    background-image: url('../../images/bootcamp/testimonials-bg.jpg');
     background-size: cover;
     
 }
@@ -189,7 +189,7 @@
 }
 
 .whyAwesomeIncHeader {
-    background-image: url(https://www.awesomeinc.org/assets/img/bootcamp/awesome-inc-bg.jpg);
+    background-image: url('/images/awesome-inc-bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: 10%;
