--- a/web/src/pages/bootcamp/Components/shield.module.scss
+++ b/web/src/pages/bootcamp/Components/shield.module.scss
@@ -15,7 +15,21 @@
     grid-template-columns: auto;
     grid-template-rows: auto;
     box-sizing: inherit;
-
+    
+    @include screen-lg{
+        background-image: url(../../../images/bootcamp/shield.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position-x: 50%;
+        background-position-y: 50%;
+        background-position: center top;
+        box-sizing: border-box ;
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto;
+        height: 200px;
+        width: 125px;
+    }
     @include screen-md{
         background-image: url(../../../images/bootcamp/shield.png);
         background-size: cover;
@@ -83,7 +97,6 @@
         justify-self: center;
         align-items: center;
         
-
         @include screen-md{
             width: 100%
         }
@@ -99,6 +112,9 @@
     .shieldText{
         font-size: 1rem;
 
+        @include screen-lg{
+            font-size: 0.75rem;
+        }
         @include screen-md{
             font-size: 0.75rem;
         }
