--- a/web/src/components/ModalButton/ModalButton.module.scss
+++ b/web/src/components/ModalButton/ModalButton.module.scss
@@ -4,14 +4,14 @@
   position: relative;
   margin: 10% 5%;
 }
-
 .team-button {
   padding-left: 10px !important;
   padding-right: 10px !important;
   position: absolute;
-  top: -10%;
-  left: 10%;
-  width: 80%;
+  bottom: -20%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 75%;
   padding: 0.8rem 2.4rem;
   display: inline-block;
   text-align: center;
