--- a/web/src/components/UI/BrandButton/BrandButton.scss
+++ b/web/src/components/UI/BrandButton/BrandButton.scss
@@ -42,6 +42,14 @@
         color: $brand-grey-dark;
     }
   }
+  &.white{
+    background-color: white;
+    border-color: white;
+    color: $brand-color2;
+    &:hover {
+      color: $brand-color;
+  }
+  }
   &.btn--small {
     font-size: 1rem;
     padding: 0.4rem 1.4rem;
