--- a/web/src/pages/about/about.module.css
+++ b/web/src/pages/about/about.module.css
@@ -11,7 +11,7 @@
 .about-header {
   background-image: url(../../images/about-page-bg.jpg);
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
   padding-bottom: 50px;
 }
 
