--- a/web/src/pages/internships/accordion.scss
+++ b/web/src/pages/internships/accordion.scss
@@ -1,6 +1,7 @@
 .accordion-button {
     background-color: #323232 !important;
     color: white;
+    font-size: 1.25rem;
 }
 .accordion-button:not(.collapsed) {
     background-color: #323232;
