--- a/web/src/styles/utility.scss
+++ b/web/src/styles/utility.scss
@@ -75,7 +75,7 @@ $bg-filter-blur: blur(2px) grayscale(0.8);
   background-color: $brand-color;
 }
 .bg--brand-light {
-  background-color: $brand-light;
+  background-color: $brand-red-bright;
 }
 
 .border-right--white {
