--- a/web/src/pages/what-we-do/what-we-do.module.scss
+++ b/web/src/pages/what-we-do/what-we-do.module.scss
@@ -16,7 +16,8 @@
 }
 
 .heading {
-  margin-top: 150px;
+  margin-top: 200px;
+  margin-left: 50px;
   float: left;
 }
 
@@ -27,7 +28,7 @@
   text-transform: none;
   line-height: 3.5rem;
   font-weight: 900;
-  font-size: 50px !important;
+  font-size: 50px;
 }
 
 .heading-subtitle {
@@ -35,18 +36,19 @@
   line-height: 25.5px;
   font-weight: 400;
   margin-bottom: 2.25rem;
+  max-width: 75%;
 }
 
+.header-container {
+  max-width: 80%;
+}
 
 .header-img {
   padding-bottom: 2rem;
-  max-width: 300px;
-  height: 300px;
-  object-fit: cover;
+  height: 400px;
 }
 
 .entrepreneurship {
-  padding: 0px 50px 50px;
   margin-bottom: 1rem;
   margin-top: 0;
 }
@@ -55,6 +57,7 @@
   max-height: 200px;
   max-width: 200px;
 }
+
 .logo-description {
   width: 70%;
   margin-left: auto;
@@ -127,8 +130,14 @@
 }
 
 @media (min-width: 900px) {
-  .header-img {
-    max-width: 250px;
+  .hall-of-fame {
+    max-width: 33%;
+  }
+}
+
+@media (max-width: 1200px) {
+  .logo-header {
+    max-width: 80%;
   }
 }
 
@@ -139,6 +148,13 @@
   }
   .logo-header {
     max-width: 100%;
+  }
+  .hall-of-fame {
+    max-width: 100%;
+    margin: auto;
+  }
+  .hall-of-fame img {
+    margin: auto;
   }
 }
 
@@ -178,13 +194,15 @@
     margin-bottom: 3rem;
   }
 
-  .header-img {
-    max-width: 300px;
-  }
-
   .gatsby-image {
     height: 80%;
     max-height: fit-content;
     object-fit: contain;
+  }
+}
+
+@media (max-width: 350px) {
+  .logo-header {
+    margin: -15px;
   }
 }
