--- a/web/src/pages/what-we-do/what-we-do.module.scss
+++ b/web/src/pages/what-we-do/what-we-do.module.scss
@@ -52,13 +52,23 @@
   margin-bottom: 1rem;
   margin-top: 0;
 }
+.logo-container {
+  height: 100px; /* Adjust the height for mobile and other text boxes*/
+  width: 220px;
+  margin-bottom: 1rem;
+}
 
+.logo-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
 .logo {
-  max-height: 200px;
-  max-width: 200px;
+  width: 200px;
 }
 
 .logo-description {
+  height: 30px;
   width: 70%;
   margin-left: auto;
   margin-right: auto;
