--- a/web/src/pages/what-we-do/what-we-do.module.scss
+++ b/web/src/pages/what-we-do/what-we-do.module.scss
@@ -56,19 +56,21 @@
   height: 100px; /* Adjust the height for mobile and other text boxes*/
   width: 220px;
   margin-bottom: 1rem;
+  display: flex;
 }
 
 .logo-container img {
+  flex: 0 0 auto;
   width: 100%;
   height: 100%;
   object-fit: contain;
 }
+
 .logo {
   width: 200px;
 }
 
 .logo-description {
-  height: 30px;
   width: 70%;
   margin-left: auto;
   margin-right: auto;
@@ -133,15 +135,22 @@
 }
 
 .asterisk {
-  height: 25px;
-  width: 25px;
-  margin-right: 10px;
-  display: inline-block;
+  height: 25px !important;
+  width: 25px !important;
+  margin-right: 8px !important;
+  display: inline-block !important;
+}
+
+.two-logos {
+  margin: auto;
 }
 
 @media (min-width: 900px) {
   .hall-of-fame {
     max-width: 33%;
+  }
+  .logo-description {
+    height: 100px;
   }
 }
 
