fix styled.components issue

--- a/web/src/components/UI/Subtitle/Subtitle.scss
+++ b/web/src/components/UI/Subtitle/Subtitle.scss
@@ -1,23 +1,22 @@
-// -----------------------------------------------------------------------------
+/* ----------------------------------------------------------------------------- */
 @import "../../../styles/variables.scss";
 @import "../../../styles/mixins"; 
-// -----------------------------------------------------------------------------
+/* ----------------------------------------------------------------------------- */
 
 .subtitle {
-  
     @font-face {
     font-family: 'The-Bohemian-Regular';
     src: local('The-Bohemian-Regular'),
        url('/web/src/assets/fonts/The-Bohemian-Regular.woff') format('woff');
     }
-    font-family: $heading-font;
+    font-family: 'Open Sans', sans-serif;
     font-size: 1.5rem;
     font-weight: 400;
     margin-top: 0;
     color: $brand-color2;
     
     &.brand {
-      color: $brand-color;
+      color: #C12029;
     }
     &.white {
       color: white;
