finished website updates

--- a/web/src/components/CourseCardLong/coursecardlong.module.scss
+++ b/web/src/components/CourseCardLong/coursecardlong.module.scss
@@ -6,7 +6,7 @@
     background-color: #FFFFFF;
     border-radius: 15px;
     margin: auto;
-    width: '75rem';
+    width: 63rem;
     position: relative;
     display: inline-block;
     overflow: hidden;
