fix idea form and events

--- a/web/src/styles/link.scss
+++ b/web/src/styles/link.scss
@@ -11,6 +11,14 @@
 
 }
 
+.link--brand-black {
+    color: $brand-color2;
+    &:hover {
+        color: $brand-red-bright;
+    }
+
+}
+
 .link--brand-dark {
     color: $color-red-dark;
     &:hover {
