--- a/web/src/components/Event/events.module.scss
+++ b/web/src/components/Event/events.module.scss
@@ -12,6 +12,7 @@
     border-color: rgba(119, 119, 119, 0.353);
     border-width: 1px;
     border-style: solid;
+    text-align: left;
 }
 
 .box:hover {
