--- a/web/src/templates/blog/blog-list-template.module.scss
+++ b/web/src/templates/blog/blog-list-template.module.scss
@@ -7,7 +7,7 @@
 
 .page {
     // padding-top: 300px;
-    margin: 0 .5rem 0 .5rem;
+    margin: 0 .5rem;
     font-weight: 900;
     color: styles.$brand-color;
     @include screen-xs {
@@ -23,6 +23,7 @@
 }
 
 .page-number-all {
+    margin: 0;
     @include screen-xs {
         display: none;
        
