--- a/web/src/components/Event/events.module.scss
+++ b/web/src/components/Event/events.module.scss
@@ -12,6 +12,8 @@
     border-color: rgba(119, 119, 119, 0.353);
     border-width: 1px;
     border-style: solid;
+    width: 26vw;
+    height: 20vh;
 }
 
 .box:hover {
@@ -22,7 +24,7 @@
 .event-image {
     float: left;
     object-fit: contain;
-    width: 25%;
+    max-width: 125px;
     transition-duration: 400ms;
 }
 
