--- a/web/src/pages/learn/learn.module.scss
+++ b/web/src/pages/learn/learn.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables';
+@import '../../styles/mixins';
 * {
     font-family: "Open Sans", sans-serif;
     box-sizing: border-box;
@@ -54,6 +56,18 @@
     padding-left: 20px;
     padding-top: 20px;
     display: block;
+    @include screen-xs {
+        height: 45vh;
+    }
+    @include screen-md {
+        height: 35vh;
+    }
+    @include screen-lg {
+        height: 25vh;
+    }
+    @include screen-max {
+        height: 20vh;
+    }
 }
 
 .carousel p{
@@ -92,19 +106,6 @@
     }
 }
 .proven-background {
-    &::before {
-        content: ""; 
-        color: rgba(0,0,0,0);
-        background-image: url('../../images/phone-booth-abstract.jpg');
-        filter: opacity(50%) blur(1pt);
-        background-repeat: no-repeat;
-        background-size: cover;
-        width: 100%;
-        height: 450px;
-        text-align: left;
-        display: block;
-        z-index: -1;
-        position: absolute;
-    }
+    background-color: #D1D2D4;
 }
 /*  ^^^^^^  */
