Learn page updates
Added courses to a card. Added the cards to /learn page. Also updated cards on /learn/adults

--- a/web/src/components/CourseCardLong/coursecardlong.module.scss
+++ b/web/src/components/CourseCardLong/coursecardlong.module.scss
@@ -46,7 +46,7 @@
     text-align: left;
     margin-left: 5%;
     position: relative;
-    font-size: 17px;
+    font-size: 17px !important;
 }
 
 .designed-for {
@@ -59,4 +59,14 @@
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 
+}
+
+.background {
+    background-size: cover;
+    background-position: center;
+    padding-top: 40px;
+    height: 32rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
