Fixed course card mobile view

--- a/web/src/components/CourseCardLong/coursecardlong.module.scss
+++ b/web/src/components/CourseCardLong/coursecardlong.module.scss
@@ -6,7 +6,8 @@
     background-color: #FFFFFF;
     border-radius: 15px;
     margin: auto;
-    width: 63rem;
+    height: auto;
+    width: 100%;
     position: relative;
     display: inline-block;
     overflow: hidden;
@@ -31,7 +32,6 @@
     display: block;
     width: fit-content;
     height: auto;
-    right: 2rem;
     max-width: 100%;
     position: relative;
 }
@@ -65,7 +65,6 @@
     background-size: cover;
     background-position: center;
     padding-top: 40px;
-    height: 32rem;
     position: relative;
     display: flex;
     flex-direction: column;
