--- a/web/src/pages/alumni/alumni.scss
+++ b/web/src/pages/alumni/alumni.scss
@@ -34,3 +34,46 @@
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
   border: none;
 }
+
+.testimonial-div {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin: 3rem 20px;
+}
+
+.test-info {
+  background-color: #ED3742;
+  color: white;
+  border-radius: 5px;
+  @media (min-width: 990px) {
+    margin: 0px 50px;
+    padding-left: 80px;
+    padding-right: 20px;
+  }
+}
+
+.description {
+  @media (max-width: 990px) {
+    font-size: 0.7rem;
+  }
+}
+
+.test-images {
+  width: 250px;
+  height: 250px;
+    
+  position: absolute;
+  bottom: -20px;
+  left: 21%;
+
+  @media (max-width: 1400px) {
+    left: 20%;
+  }
+  @media (max-width: 1200px) {
+    left: 17%;
+  }
+  @media (max-width: 990px) {
+    display: none;
+  }
+}
