--- a/web/src/pages/bootcamp/Components/sideNav.module.scss
+++ b/web/src/pages/bootcamp/Components/sideNav.module.scss
@@ -6,12 +6,14 @@
 .navContainer {
     background-color:whitesmoke;
     position: fixed;
-    right: 0;
+    right: -200px;
+    top: 25%;
     margin-top: -6rem;
     z-index: 999;
     max-width: 250px;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
+    transition: right 0.3s ease; /* Smooth transition */
 
     nav {
         padding-top: 5px;
@@ -24,4 +26,7 @@
             @include font-size(6);
         }
     }
+}
+.show {
+    right: 0; /* Bring it into view */
 }
