--- a/web/src/pages/weekofcode/Components/ProjectCard.module.css
+++ b/web/src/pages/weekofcode/Components/ProjectCard.module.css
@@ -14,6 +14,11 @@
     justify-content: center;
     position: absolute;
     transform: translate(0, -60px);
+    @media (max-width: 768px) {
+        height: 100px;
+        width: 100px;
+        transform: translate(0, -70px);
+    }
 }
 
 .block {
