--- a/web/src/pages/weekofcode/weekofcode.module.css
+++ b/web/src/pages/weekofcode/weekofcode.module.css
@@ -62,11 +62,15 @@ a:hover {
 
 .review {
   background-color: #6EC8BF;
-  padding: 50px 0px;
+  padding: 50px 200px;
 
-  @media (min-width: 768px) {
-    padding: 50px 200px;
+  @media (max-width: 1024px) {
+    padding: 50px 100px;
   }
+  @media (max-width: 768px) {
+    padding: 50px 0px;
+  }
+  
 }
 .review-text {
   @media (max-width: 768px) {
